# EasyCompute

./: README.md
EasyComputeCreator/: Makefile  README.md  main.py  pyproject.toml
EasyComputeCreator/docs/: Makefile  make.bat
EasyComputeCreator/docs/source/: conf.py  index.rst
EasyComputeCreator/docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
EasyComputeCreator/src/: compute_creator.py  compute_creator_mono.py
EasyComputeCreator/src/utils/: log.py
EasyComputeCreator/src/utils/schemas/: compute_input.py
EasyComputeCreator/src/utils/schemas/aws/: auth.py  ec2.py
EasyComputeCreator/src/utils/schemas/azure/: auth.py  avm.py
EasyComputeCreator/src/utils/schemas/gcp/: auth.py  gce.py
EasyComputeCreator/src/utils/service/: aws.py  azure.py  base.py  gcp.py
EasyComputeCreator/tests/: test_build.py
EasyComputeCreator/tests/test_data/: compute_config.yaml
